# rust-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  plan.md
.github/workflows/: ci.yml  deploy-cloudflare.yml  publish.yml
client/: Cargo.toml  README.md
client/src/: client.rs  lib.rs  server_request.rs
client/src/transport/: mod.rs  sse.rs  stdio.rs  streamable.rs  websocket.rs
crates/mcp/: Cargo.toml
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: error.rs  lib.rs
crates/mcp-core/src/types/: messages.rs  mod.rs  prompt.rs  resource.rs  sampling.rs  tool.rs
crates/mcp-macros/: Cargo.toml
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: builder.rs  extract.rs  handler.rs  lib.rs  server.rs  session.rs
crates/mcp-server/src/router/: mod.rs
crates/mcp-transport/: Cargo.toml
crates/mcp-transport/src/: codec.rs  lib.rs  sse.rs  stdio.rs
crates/mcp/src/: lib.rs
deploy/cloudflare/: .gitignore  Cargo.toml  README.md  wrangler.toml
deploy/cloudflare/docs/: architecture.md
deploy/cloudflare/src/: completion.rs  instructions.md  lib.rs  server.rs
deploy/cloudflare/src/auth/: apikey.rs  basic.rs  bearer.rs  mod.rs
deploy/cloudflare/src/prompts/: mod.rs
deploy/cloudflare/src/resources/: config.rs  mod.rs  templates.rs
deploy/cloudflare/src/tools/: calculator.rs  mod.rs  text.rs
deploy/native/: Cargo.toml  README.md
deploy/native/src/: config.rs  main.rs
deploy/native/src/adapter/: mod.rs
deploy/native/src/adapter/resources/: database.rs  mod.rs
deploy/native/src/adapter/tools/: mod.rs  query.rs  schema.rs  stats.rs
deploy/native/src/domain/: mod.rs  model.rs  port.rs
deploy/native/src/infrastructure/: clickhouse.rs  mod.rs
docs/: PLUGINS.md  PLUGIN_PATTERNS.md
examples/: CLICKHOUSE_PLUGIN.md  GITHUB_PLUGIN.md  PLUGINS.md  auth_apikey.rs  auth_basic.rs  auth_bearer.rs  auth_composite.rs  auth_mtls.rs  auth_oauth2.rs  calculator.rs  completion.rs  everything.rs  macros_demo.rs  notifications.rs  plugin_clickhouse.rs  plugin_confluence.rs  plugin_github.rs  plugin_jira.rs  plugin_weather.rs  progress.rs  streamable_http.rs  wasm_plugin.rs
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs
examples/everything/: Cargo.toml
examples/everything/src/: main.rs
gateway/: Cargo.toml  README.md
gateway/examples/: gateway.rs
gateway/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  protocol.rs
src/auth/: apikey.rs  basic.rs  bearer.rs  composite.rs  credentials.rs  custom.rs  identity.rs  mod.rs  mtls.rs  oauth2.rs  provider.rs
src/plugin/: mod.rs  native.rs  registry.rs  wasm.rs
src/server/: auth_context.rs  builder.rs  core.rs  elicitation.rs  extract.rs  handler.rs  mod.rs  notification.rs  progress.rs  router.rs  server.rs  session.rs
src/transport/: auth_layer.rs  codec.rs  mod.rs  sse.rs  stdio.rs  streamable.rs  tls.rs
src/types/: content.rs  elicitation.rs  messages.rs  mod.rs  resource.rs  tool.rs
tests/: integration_tests.rs
