[workspace]
members  = ["macros"]
resolver = "2"

[package]
name        = "rust-mcp"
version     = "0.1.0"
edition     = "2021"
authors     = ["Ton That Vu"]
license     = "MIT"
repository  = "https://github.com/KSD-CO/rust-mcp"
homepage    = "https://github.com/KSD-CO/rust-mcp"
rust-version = "1.75"
description  = "Ergonomic, type-safe Rust library for building MCP servers"
keywords     = ["mcp", "model-context-protocol", "llm", "ai", "jsonrpc"]
categories   = ["network-programming", "asynchronous"]

[lib]
name = "rust_mcp"
path = "src/lib.rs"

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[[example]]
name = "everything"
path = "examples/everything.rs"

# ─── Features ────────────────────────────────────────────────────────────────
# default = full stack (tokio server + stdio + SSE transports)
# Use `default-features = false` to get only the core types (WASM-friendly).

[features]
default = ["full"]
full    = ["server", "stdio", "sse"]

## Enables McpServer, builder, handlers, router, session
server = ["dep:uuid"]

## Enables the stdio (stdin/stdout) transport
stdio  = ["server", "dep:tokio", "dep:tokio-util", "dep:futures-util", "dep:bytes"]

## Enables the SSE / HTTP transport (requires axum)
sse    = ["server", "dep:tokio", "dep:axum", "dep:dashmap"]

# ─── Dependencies ─────────────────────────────────────────────────────────────

[dependencies]
# Always compiled (lightweight, WASM-safe)
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
tracing      = "0.1"
schemars     = { version = "0.8", features = ["derive"] }

# Feature-gated: server
uuid     = { version = "1", features = ["v4"],           optional = true }

# Feature-gated: stdio
tokio      = { version = "1", features = ["full"],        optional = true }
tokio-util = { version = "0.7", features = ["codec","io"], optional = true }
futures-util = { version = "0.3",                          optional = true }
bytes      = { version = "1",                              optional = true }

# Feature-gated: sse
axum     = { version = "0.7", features = ["ws"],          optional = true }
dashmap  = { version = "6",                                optional = true }

# Proc-macro companion (compiles to host, always safe)
rust-mcp-macros = { path = "macros" }

[dev-dependencies]
tokio              = { version = "1", features = ["full"] }
anyhow             = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars           = { version = "0.8", features = ["derive"] }
serde              = { version = "1", features = ["derive"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
