[workspace]
members  = ["macros", "client"]
exclude  = ["deploy/cloudflare"]
resolver = "2"

[package]
name        = "mcp-kit"
version     = "0.1.6"
edition     = "2021"
authors     = ["Ton That Vu"]
license     = "MIT"
repository  = "https://github.com/KSD-CO/mcp-kit"
homepage    = "https://github.com/KSD-CO/mcp-kit"
rust-version = "1.85"
description  = "Ergonomic, type-safe Rust library for building MCP servers with authentication support"
keywords     = ["mcp", "protocol", "llm", "ai", "jsonrpc"]
categories   = ["network-programming", "asynchronous"]

[lib]
name = "mcp_kit"
path = "src/lib.rs"

# ─── Features ────────────────────────────────────────────────────────────────
# default = full stack (tokio server + stdio + SSE transports)
# Use `default-features = false` to get only the core types (WASM-friendly).

[features]
default = ["full"]
full    = ["server", "stdio", "sse", "websocket", "auth-full"]

## Enables McpServer, builder, handlers, router, session
server = ["dep:uuid"]

## Enables the stdio (stdin/stdout) transport
stdio  = ["server", "dep:tokio", "dep:tokio-util", "dep:futures-util", "dep:bytes"]

## Enables the SSE / HTTP transport (requires axum)
sse    = ["server", "dep:tokio", "dep:axum", "dep:dashmap", "dep:futures-util"]

## Enables the WebSocket transport (requires axum with ws)
websocket = ["server", "dep:tokio", "dep:axum", "dep:futures-util"]

## Auth features
auth        = ["server"]
auth-bearer = ["auth"]
auth-apikey = ["auth"]
auth-basic  = ["auth", "dep:base64"]
auth-oauth2 = ["auth", "dep:reqwest", "dep:jsonwebtoken", "dep:tokio"]
auth-mtls   = ["auth", "sse", "dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:hyper", "dep:hyper-util", "dep:tower-service"]
auth-full   = ["auth-bearer", "auth-apikey", "auth-basic"]

# ─── Dependencies ─────────────────────────────────────────────────────────────

[dependencies]
# Always compiled (lightweight, WASM-safe)
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
tracing      = "0.1"
schemars     = { version = "0.8", features = ["derive"] }

# Feature-gated: server
uuid     = { version = "1.11", features = ["v4"],           optional = true }

# Feature-gated: stdio
tokio      = { version = "1", features = ["full"],        optional = true }
tokio-util = { version = "0.7", features = ["codec","io"], optional = true }
futures-util = { version = "0.3",                          optional = true }
bytes      = { version = "1",                              optional = true }

# Feature-gated: sse
axum     = { version = "0.7", features = ["ws"],          optional = true }
dashmap  = { version = "6",                                optional = true }

# Feature-gated: auth
base64         = { version = "0.22", optional = true }
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
jsonwebtoken   = { version = "9", optional = true }

rustls         = { version = "0.23", optional = true }
tokio-rustls   = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
hyper          = { version = "1", features = ["http1", "http2"], optional = true }
hyper-util     = { version = "0.1", features = ["tokio", "server-auto"], optional = true }
tower-service  = { version = "0.3", optional = true }

# Proc-macro companion (compiles to host, always safe)
mcp-kit-macros = { version = "0.1.2", path = "macros" }

[dev-dependencies]
tokio              = { version = "1", features = ["full"] }
anyhow             = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars           = { version = "0.8", features = ["derive"] }
serde              = { version = "1", features = ["derive"] }

# ─── Examples ─────────────────────────────────────────────────────────────────

[[example]]
name = "auth_oauth2"
required-features = ["auth-oauth2", "sse"]

[[example]]
name = "auth_mtls"
required-features = ["auth-mtls"]

[[example]]
name = "auth_bearer"
required-features = ["auth-bearer", "sse"]

[[example]]
name = "auth_apikey"
required-features = ["auth-apikey", "sse"]

[[example]]
name = "auth_basic"
required-features = ["auth-basic", "sse"]

[[example]]
name = "auth_composite"
required-features = ["auth-full", "sse"]

[[example]]
name = "websocket"
required-features = ["websocket"]

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
