[package]
name        = "mcp-kit-macros"
version     = "0.1.2"
edition     = "2021"
authors     = ["Ton That Vu"]
license     = "MIT"
repository  = "https://github.com/KSD-CO/mcp-kit"
homepage    = "https://github.com/KSD-CO/mcp-kit"
rust-version = "1.80"
description  = "Proc-macro attributes (#[tool], #[resource], #[prompt]) for the mcp-kit crate"
keywords     = ["mcp", "protocol", "macros", "derive", "ai"]
categories   = ["development-tools"]
readme       = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full"] }
