[package]
name = "mcp-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Proc-macro attributes (#[tool], #[resource], #[prompt]) for the mcp crate"
keywords = ["mcp", "model-context-protocol", "macros", "derive", "ai"]
categories = ["development-tools::procedural-macro-helper"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
