[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Server implementation for the MCP Rust library"
keywords = ["mcp", "model-context-protocol", "server", "llm", "ai"]
categories = ["network-programming", "asynchronous"]

[dependencies]
mcp-core = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }
