[package]
name    = "mcp-kit-native-gateway"
version = "0.2.0"
edition = "2021"
publish = false

[[bin]]
name = "mcp-gateway"
path = "src/main.rs"

[dependencies]
# MCP server with all transports
mcp-kit = { path = "../..", features = ["full"] }

# MCP gateway for proxying upstream servers
mcp-kit-gateway = { path = "../../gateway", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Schema generation for tool inputs
schemars = { version = "0.8", features = ["derive"] }

# HTTP client for ClickHouse HTTP interface
reqwest = { version = "0.12", features = ["json"] }

# URL encoding for query parameters
urlencoding = "2"

# Async trait for domain port
async-trait = "0.1"

# .env file loading
dotenvy = "0.15"

# Error handling
anyhow = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
