[package]
name = "calculator"
version.workspace = true
edition.workspace = true
description = "Calculator MCP server example"

[[bin]]
name = "calculator"
path = "src/main.rs"

[dependencies]
mcp = { path = "../../crates/mcp" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
